# pkg/api/defs.go
@@ -2,6 +2,15 @@ package api
 
 import "time"
 
+type AuthTokenCreateRequest struct {
+	Subject string `json:"subject"`
+}
+
+type AuthTokenResponse struct {
+	ID       string    `json:"id"`
+	NotAfter time.Time `json:"not_after"`
+}
+
 type MiscVersionResponse struct {
 	Go       string    `json:"go"`
 	Modified bool      `json:"modified"`
